--- a/app/views/pages/step3.html.erb
+++ b/app/views/pages/step3.html.erb
@@ -36,7 +36,7 @@
   </div>
 </form>
 
-        <p><a class="btn btn-lg btn-success" href="http://localhost:3000/newevent">Next</a></p>
+        <p><a class="btn btn-lg btn-success" href="http://localhost:3000/buildyourprofile">Next</a></p>
       </div>
   </div>
 
