--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,31 +1,30 @@
 
 
   <body>
-
-    <div class="container">
-    	<div class="col-md-6 col-md-offset-3">
-    		<h5></h5>
-    		<center>
-    			<%= image_tag("hfcfinal_dkbluetag_fb.png", :alt => "rss feed") %>
-    		</center>
-    	<div class="row">
-		  <div class="col-xs-6 col-md-4 text-left"><h1>1</h1></div>
-		  <div class="col-xs-6 col-md-4 text-center"><h1>2</h1></div>
-		  <div class="col-xs-6 col-md-4 text-right"><h1>3</h1></div>
-		</div>
+<div id="featureimage">
+ <div class="col-md-6 col-md-offset-3">
+        <h5></h5>
+        <center>
+          <%= image_tag("hfcfinal_dkbluetag_fb.png", :alt => "rss feed") %>
+        </center>
+      <div class="row">
+      <div class="col-xs-6 col-md-4 text-left"><h8>1</h8></div>
+      <div class="col-xs-6 col-md-4 text-center"><h8>2</h8></div>
+      <div class="col-xs-6 col-md-4 text-right"><h8>3</h8></div>
+    </div>
       <div class="progress progress-striped active">
-		  <div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-		    <span class="sr-only">45% Complete</span>
-		  </div>
-	  </div>
+      <div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+        <span class="sr-only">45% Complete</span>
+      </div>
+    </div>
       <div class="jumbotron">
         <h1>I am a...</h1>
         <p class="lead">
-        	<select class="form-control">
-			  <option>Broker</option>
-			  <option>Health Insurance Provider</option>
-			  <option>HR Manager/Benefits Coordinator</option>
-			</select>
+          <select class="form-control">
+        <option>Broker</option>
+        <option>Health Insurance Provider</option>
+        <option>HR Manager/Benefits Coordinator</option>
+      </select>
 
 <form class="form-horizontal" role="form">
   <div class="form-group">
@@ -39,8 +38,5 @@
         <p><a class="btn btn-lg btn-success" href="http://localhost:3000/step2">Next</a></p>
       </div>
   </div>
+</div>
 
-     
-     
-
-    </div> <!-- /container -->
