--- a/app/views/pages/step3.html.erb
+++ b/app/views/pages/step3.html.erb
@@ -1,8 +1,7 @@
 
 
   <body>
-
-    <div class="container">
+<div id="featureimage">
     	<div class="col-md-6 col-md-offset-3">
     		<h5></h5>
     		<center>
@@ -10,9 +9,9 @@
 
     		</center>
     	<div class="row">
-		  <div class="col-xs-6 col-md-4 text-left"><h1>1</h1></div>
-		  <div class="col-xs-6 col-md-4 text-center"><h1>2</h1></div>
-		  <div class="col-xs-6 col-md-4 text-right"><h1>3</h1></div>
+		  <div class="col-xs-6 col-md-4 text-left"><h8>1</h8></div>
+		  <div class="col-xs-6 col-md-4 text-center"><h8>2</h8></div>
+		  <div class="col-xs-6 col-md-4 text-right"><h8>3</h8></div>
 		</div>
       <div class="progress progress-striped active">
 		  <div class="progress-bar"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
