Add pg gem for heroku

--- a/app/views/pages/buildyourprofile2.html.erb
+++ b/app/views/pages/buildyourprofile2.html.erb
@@ -69,7 +69,7 @@
       <div class="container"><br>
   <h1>Build Your Profile</h1><br>
   <h1></h1>
-              <center><p class="lead"><strong>Step 2:</strong> Add your office locations.</p></center>
+              <center><p class="lead"><strong>Step 2:</strong> Add your company locations.</p></center>
       <div class="row">
       <div class="col-xs-6 col-md-4 text-left"><h1></h1></div>
       <div class="col-xs-6 col-md-4 text-center"><h1>40%</h1></div>
